--- a/code.ipynb
+++ b/code.ipynb
@@ -791,12 +791,12 @@
     "edge_labels = nx.get_edge_attributes(G, 'label')\n",
     "nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=8)\n",
     "\n",
-    "# Increase figure size\n",
+    "\n",
     "plt.figure(figsize=(14, 10))\n",
     "\n",
-    "# Display the plot\n",
+    "\n",
     "plt.title('Subset of Association Rules Network Diagram')\n",
-    "plt.axis('off')  # Disable axis\n",
+    "plt.axis('off')  \n",
     "plt.show()\n"
    ]
   },
